fix background image in home page covering whole viewport inmobile and tablet

--- a/style.css
+++ b/style.css
@@ -284,10 +284,11 @@ input:valid, textarea:valid {
 
 @media screen and (max-width: 1000px) {
     body {
-        height: 100%;
+        height: 100vh;
+
         overflow-y: auto;
     }
-
+    
     .home-page .container {
         display: flex;
         flex-flow: row wrap;
@@ -309,12 +310,11 @@ input:valid, textarea:valid {
 }
 
 @media screen and (max-width: 600px) {
-    .home-page {
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center;
+    body {
+        height: 100%;
+        /* overflow-y: auto; */
     }
-    
+
     .home-page .container {
         gap: 2em;
     }
